--- a/thesis/implementation/08_testing.tex
+++ b/thesis/implementation/08_testing.tex
@@ -1,6 +1,6 @@
 \section{Testing}
 \subsection{Scalatest}
-Testing tool used in the project is called Scalatest. 
 
 \subsection{Parser testing}
 
+\subsection{Core testing}
