--- a/thesis/background/01_database_libs.tex
+++ b/thesis/background/01_database_libs.tex
@@ -1,9 +1,11 @@
 \section{Database libraries for Scala}
 When we are working with databases in Java, we are most likely using JDBC, either directly or by wrappers like JPA or Hibernate. JDBC is available in Scala as well by simply importing the \texttt{java.sql} API. The connection to the database can be established similarly as it would be done in Java. But there are multiple existing libraries made for Scala, that ensure an easier way for the programmer to work with databases. Below there are few examples of libraries that were created for that specific reason.
 
-
 \subsection{Quill}
-Quill provides a Quoted Domain Specific Language (QDSL).~\cite{Quill} Its primary usage is to generate SQL queries, using only Scala code which resembles collection-like operations using combinator methods, such as a filter or map. Doing it this way Quill also provides type-safe queries, based on validation against defined database structure. The disadvantage of this approach is that the user can't validate generic queries without creating the case class database structure beforehand.
+Quill provides a Quoted Domain Specific Language (QDSL).~\cite{Quill} Its primary usage is to generate SQL queries, using only Scala code which resembles collection-like operations using combinator methods, such as a filter or map. Doing it this way, Quill also provides type-safe queries, based on validation against defined database structure. The query generation requires a defined case class database structure. Quill also provides compile-time validation of the queries by checking against an existing database connection.
 
 \subsection{Doobie}
-Next up there is have Doobie, which is presented as \textit{"Doobie is a pure functional JDBC layer for Scala"}.~\cite{Doobie} In this library we can create pure SQL queries. The disadvantage is that for validation of queries, there has to be an existing connection to the database. This only allows validation at run-time.
+Next up there is Doobie, which is presented as \textit{"Doobie is pure functional JDBC layer for Scala"}.~\cite{Doobie} In this library we can create pure SQL queries in plain text form. 
+
+Just like in Quill, validation is possible only with an existing database. Additionally, it is only possible to validate during runtime.
+
