--- a/thesis/implementation/03_native_libary.tex
+++ b/thesis/implementation/03_native_libary.tex
@@ -6,7 +6,7 @@ Native code is compiled to run on a specific processor. Examples of languages th
 
 Java byte code, on the other hand, is compiled source code from i.e. Java, Scala. Byte code is then translated to machine code using JVM. Any system that has JVM can run the byte code, does not matter which operating system it uses. That is why Java and Scala as well, are platform-independent.
 
-Now because of this difference, we can't directly "import" the C library into our Scala code, but we have to use workaround, that enables this.
+Now because of this difference, we can't directly import the C library into our Scala code, but we have to use workaround, that enables this.
 
 \subsection{Java native interface}
 JNI is programming interface for writing Java native methods.\cite{JNI} It is used to enable Java code to use native applications and libraries. 
