--- a/thesis/introduction/01_motivation.tex
+++ b/thesis/introduction/01_motivation.tex
@@ -1,3 +1,9 @@
-\section{Motivation and goals}
+Scala is a programming language that combines object-oriented programming with the support of functional programming. The source code of Scala is intended to be compiled into Java bytecode and run on JVM. That makes it a great starting point for programmers who want to get their first experience with functional programming. 
 
-Main goal of my work is to create Scala specific library to support constructing statically typed PostgreSQL queries for Scala. This includes validation of queries and accessing internal PostgreSQL parse tree, which can be helpful for multiple different reasons....
+Then we have PostgreSQL, one of the most popular relational database management systems currently available. It has wide support for working with different programming languages, regular updates, improvements, and plenty of documentation and tutorial available everywhere. The fact that the whole project is open source and free allows anyone to dive right into it.
+
+In the world of Scala, there are already few libraries made to work with the PostgreSQL database, create queries, and more. Most of them are used with a direct connection to the database. Because of that, the queries used are validated only when they are executed. However, Scala is a statically typed language, which means that type checking is done at compile time, which eliminates few categories of possible bugs before the code is run. The goal is to apply the same approach to validation of the SQL queries, so we can, to some extent, do that during compilation. By using SQL parse trees, we can also create and update statically typed queries.
+
+In the theoretical part, we will talk about technologies used in this project like Scala, PostgreSQL and SQL parse trees. Then we will show few examples of existing Scala libraries for working with databases, their pros, cons, and how does our library fit into the whole ecosystem. We will also describe the C library, which is used to access the internal parse function of the PostgreSQL server, to get the parse tree.
+
+Then in the realization part, we will go through the implementation process. We will start with the representation of the parse tree in Scala and accessing the C library from our Scala code. Then we will talk about macros and how to use them. In the end, we combine the macros and custom interpolators to introduce type-checked queries. 
