--- a/thesis/01_introduction/03_scala.tex
+++ b/thesis/01_introduction/03_scala.tex
@@ -1,9 +1,9 @@
 \section{Scala}
 \subsection{Introduction}
-Scala belongs to the group of programming languages that can be compiled into Java byte code and run on a Java virtual machine (JVM). The major part, which makes it different from well-known Java, is the combination of applying a functional approach with an object-oriented paradigm. Together with the fact that Scala is similar to Java and it uses object-oriented principles, it can ease up transition for programmers who are unfamiliar with the functional world.
+Scala belongs to the group of programming languages that can be compiled into Java byte code and run on a Java virtual machine (JVM). The major part, which makes it different from well-known Java, is the combination of applying a functional approach with an object-oriented paradigm. 
 
 \subsection{Static vs. dynamic typing}
-Besides the functional fundamentals, Scala belongs to the family of statically typed languages. This family also includes languages like C, C++, Java, or Haskell. Therefore, every single statement in Scala has a type.\cite{Scala static} Statically typed languages validates the type during compile time and once you compile it, you can run the compiled program multiple times.
+Besides the functional fundamentals, Scala belongs to the family of statically typed languages. This family also includes languages like C, C++, Java, or Haskell. Therefore, every single statement in Scala has a type.\cite{Static vs dynamic} Statically typed languages validates the type during compile time and once you compile it, you can run the compiled program multiple times.
 
 On the other hand, dynamic typing does all type checking during runtime, and everytime you want to run the program, it is compiled again. Examples of languages, which use dynamic typing, are Python, Ruby and PHP.
 
@@ -12,6 +12,6 @@ Strongly typed languages enforce strict restrictions on intermixing values with 
 
 \begin{figure}[h]
   \makebox[\textwidth]{\includegraphics[width=\textwidth]{languages.png}}
-  \caption {Languages divided into groups.\cite{Typing image}}
+  \caption {Languages divided into groups.\cite{Static vs dynamic}}
 \end{figure}
 
